# claude-agent-sdk

./: .env.example  .gitignore  pyproject.toml  test_agent.py  test_browser.py  test_slack.py
agents/mk_draft/: __init__.py  agent.py  history.json
agents/research/: __init__.py  agent.py  history.json
ai-camp/: cowork.docx  cowork.md  macmini-doc.md  naw-flow.md  slack-agent.md
document/: ClaudeAgentSDK.md  agent-creation-guide.md
slack_bot/: main.py
