[project]
name = "agent-platform"
version = "0.1.0"
description = "Slack-based multi-agent platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "claude-agent-sdk==0.1.41",
    "python-dotenv>=1.0.0",
    "slack-sdk>=3.0.0",
    "websocket-client>=1.0.0",
    "gspread>=5.0.0",
    "google-auth>=2.0.0",
]
